--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "private": true,
   "dependencies": {
+    "docsearch.js": "^1.5.0",
+    "instantsearch.js": "^1.10.5",
+    "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
